--- a/bishi/paixu/bfc.html
+++ b/bishi/paixu/bfc.html
@@ -52,17 +52,34 @@
       /* background-color: violet; */
       overflow: hidden;
     }
+
+    .div1 {
+      width: 200px;
+      height: 200px;
+      background-color: red;
+      overflow: hidden;
+    }
+
+    .div2 {
+      width: 100px;
+      height: 100px;
+      background-color: yellow;
+      margin-top: 20px;
+    }
   </style>
 </head>
 
 <body>
-  <div id="c1">
+  <!-- <div id="c1">
     <div id="red"></div>
     <div id="orange"></div>
   </div>
   <div id="c2">
     <div id="yellow"></div>
     <div id="green"></div>
+  </div> -->
+  <div class="div1">
+    <div class="div2"></div>
   </div>
 </body>
 
