--- a/bishi/paixu/bfc.html
+++ b/bishi/paixu/bfc.html
@@ -70,17 +70,17 @@
 </head>
 
 <body>
-  <!-- <div id="c1">
+  <div id="c1">
     <div id="red"></div>
     <div id="orange"></div>
   </div>
   <div id="c2">
     <div id="yellow"></div>
     <div id="green"></div>
-  </div> -->
-  <div class="div1">
-    <div class="div2"></div>
   </div>
+  <!-- <div class="div1">
+    <div class="div2"></div>
+  </div> -->
 </body>
 
 </html>
