--- a/bishi/paixu/atest.html
+++ b/bishi/paixu/atest.html
@@ -38,10 +38,10 @@
 </head>
 
 <body>
-  <div class="nav">
+  <!-- <div class="nav">
     <div class="box1"></div>
   </div>
-  <div class="box2"></div>
+  <div class="box2"></div> -->
   <script type='text/javascript'>
     // function Observe(data) {
     //   Object.keys(data).forEach(key => {
@@ -57,7 +57,7 @@
     // }
     // const p = Object.create(new Observe({a:3}))
     // console.log(p)
-
+    
 
 
   </script>
