--- a/bishi/note/promise/index.html
+++ b/bishi/note/promise/index.html
@@ -11,11 +11,11 @@
 <body>
   <script type='module'>
     // import Promise from './promise.js'
-    import Promise from './promise1.js'
+    // import Promise from './promise1.js'
 
     let p1 = new Promise((resolve, reject) => {
       setTimeout(() => {
-        resolve('111');
+        reject('111');
       }, 1000)
     })
     let p2 = Promise.resolve('Success');
@@ -25,6 +25,8 @@
     let result = Promise.all([p1, p2, p3])
 
     console.log(result)
+
+    console.log(Promise.reject(new Error('err')))
 
   </script>
 </body>
