--- a/bishi/paixu/atest.html
+++ b/bishi/paixu/atest.html
@@ -34,6 +34,17 @@
       background-color: yellow;
     }
 
+    .div1 {
+      width: 200px;
+      height: 200px;
+      background-color: red;
+    }
+
+    .div2 {
+      text-align: center;
+      line-height: 200px;
+    }
+
   </style>
 </head>
 
@@ -42,6 +53,9 @@
     <div class="box1"></div>
   </div>
   <div class="box2"></div> -->
+  <div class="div1">
+    <div class="div2">产品</div>
+  </div>
   <script type='text/javascript'>
     // function Observe(data) {
     //   Object.keys(data).forEach(key => {
@@ -57,8 +71,10 @@
     // }
     // const p = Object.create(new Observe({a:3}))
     // console.log(p)
-    
 
+  const reg = null
+     
+  console.log(Object.prototype.toString.call(reg))
 
   </script>
 </body>
