--- a/bishi/paixu/atest.html
+++ b/bishi/paixu/atest.html
@@ -12,9 +12,7 @@
       height: 2000px;
     }
 
-    .nav {
-      
-    }
+
     .box1 {
       width: 100px;
       height: 100px;
@@ -22,6 +20,7 @@
       position: fixed;
       top: 0;
     }
+
     .nav::before {
       content: '';
       display: block;
@@ -45,6 +44,12 @@
       line-height: 200px;
     }
 
+    div {
+      width: 100px;
+      height: 100px;
+      font-size: 15px;
+      line-height: 15px;
+    }
   </style>
 </head>
 
@@ -53,28 +58,57 @@
     <div class="box1"></div>
   </div>
   <div class="box2"></div> -->
-  <div class="div1">
-    <div class="div2">产品</div>
+  <div>1111111111111111
   </div>
   <script type='text/javascript'>
-    // function Observe(data) {
-    //   Object.keys(data).forEach(key => {
-    //     Object.defineProperty(this, key, {
-    //       get() {
-    //         return data[key]
-    //       },
-    //       set(value) {
-    //         data[key] = value
-    //       }
-    //     })
-    //   })
-    // }
-    // const p = Object.create(new Observe({a:3}))
-    // console.log(p)
+    function isTextOverflow(className, dom = document, extraPixel = 0, isLineMultiple = false) {
+      let flag
+      // origin
+      const originDom = dom.querySelector(className)
+      if (!originDom) return false
+      const originStyle = window.getComputedStyle(originDom)
+      const originFontSize = originStyle.fontSize
+      console.log(originDom.style.fontSize)
+      const originLineHeight = originStyle.lineHeigh
+      const originRect = originDom.getBoundingClientRect()
+      const originWidth = originRect.width
+      const originHeight = originRect.height
+      const cloneDom = document.createElement("div")
+      originDom.childNodes.forEach(node => {
+        // 第三种
+        cloneDom.appendChild(node.cloneNode(true))
+      })
+      if (isLineMultiple) {
+        cloneDom.style.width = originStyle.width
+      }
+      cloneDom.style.lineHeight = originLineHeight
+      cloneDom.style.fontSize = originFontSize
+      cloneDom.style.position = "absolute"
+      cloneDom.style.visibility = "hidden"
+      cloneDom.style.zIndex = -1
+      cloneDom.style.top = 0
+      document.body.appendChild(cloneDom)
+      const cloneRect = cloneDom.getBoundingClientRect()
+      const cloneWidth = cloneRect.width
+      const cloneHeight = cloneRect.height
+      // 判断
+      if (isLineMultiple) {
+        flag = cloneHeight + extraPixel > originHeight
+      } else {
+        flag = cloneWidth + extraPixel > originWidth
+        console.log(cloneWidth, originWidth)
+      }
+      document.body.removeChild(cloneDom)
+      // return
+      return flag
+    }
 
-  const reg = null
-     
-  console.log(Object.prototype.toString.call(reg))
+    console.log(isTextOverflow('div', undefined))
+
+    var aFileParts = ['<a id="a"><b id="b">hey!</b></a>']; // 一个包含DOMString的数组
+    var oMyBlob = new Blob(aFileParts, { type: 'text/html' }); // 得到 blob
+
+    href = window.URL.createObjectURL('123')
 
   </script>
 </body>
